Fixed the card view alignment issue.

--- a/app/styles/components/new-cards/_gru-class-activity-card.scss
+++ b/app/styles/components/new-cards/_gru-class-activity-card.scss
@@ -3,6 +3,7 @@
     display: grid;
     background-color: #fff;
     box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.3);
+    grid-template-rows: 160px 40px auto 93px 50px;
     .activity-info {
       display: grid;
       align-items: center;
@@ -14,6 +15,7 @@
           display: grid;
           grid-template-columns: auto auto;
           column-gap: 3px;
+          align-items: center;
           .icon-style {
             width: 20px;
             height: 20px;
@@ -316,7 +318,7 @@
         border-bottom: 1px solid rgba(151, 151, 151, 0.4);
       }
       .class-info {
-        max-height: 105px;
+        max-height: 93px;
         overflow-y: auto;
         .assigned-class {
           grid-template-columns: 1fr 40px auto auto;
